# mad_soft_test_memes

./: .env.example  .flake8  .gitignore  .isort.cfg  README.md  docker-compose.local.yml  entrypoint.sh  memes.Dockerfile  pyproject.toml  s3.Dockerfile
memes_api_service/: alembic.ini  main.py  openapi.json
memes_api_service/alembic/: env.py
memes_api_service/alembic/versions/: 4264a431e577_add_user_and_meme_models.py
memes_api_service/api/: routers.py  validators.py
memes_api_service/api/endpoints/: memes.py  user.py
memes_api_service/core/: base.py  config.py  constants.py  db.py  init_db.py  user.py
memes_api_service/crud/: memes.py
memes_api_service/models/: __init__.py  memes.py
memes_api_service/schemas/: memes.py  user.py
s3_api_service/: main.py  openapi.json
s3_api_service/alembic/versions/: 5791ed1b719f_add_user_model.py
s3_api_service/api/: exceptions.py  routers.py  utils.py  validators.py
s3_api_service/api/endpoints/: media_management.py  user.py
s3_api_service/core/: base.py  config.py  constants.py  init_db.py  user.py
s3_api_service/models/: __init__.py
s3_api_service/schemas/: user.py
