[tool.poetry]
name = "mad-soft-test-memes"
version = "0.1.0"
description = ""
authors = ["Nikita Kornyakov <nikkornyakov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
uvicorn = "^0.30.1"
fastapi-users = "^13.0.0"
fastapi-users-db-sqlalchemy = "^6.0.1"
boto3 = "^1.34.123"
minio = "^7.2.7"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
